fix nav spacing

--- a/css/style.css
+++ b/css/style.css
@@ -3261,8 +3261,8 @@ select[multiple].input-group-sm > .form-control, select[multiple].input-group-sm
     max-height: 200px; } }
 
 .container-fluid > .navbar-collapse, .container-fluid > .navbar-header, .container > .navbar-collapse, .container > .navbar-header {
-  margin-right: -15px;
-  margin-left: -15px; }
+  margin-right: 0px;
+  margin-left: 0px; }
 
 @media (min-width: 768px) {
   .container-fluid > .navbar-collapse, .container-fluid > .navbar-header, .container > .navbar-collapse, .container > .navbar-header {
